# leetcode

./: CMakeLists.txt  LICENSE  README.md
array-and-string/: CMakeLists.txt
array-and-string/1071-Greatest-Common-Divisor-of-Strings/: main1.cpp
array-and-string/1143-Longest-Common-Subsequence/: main1.cpp
array-and-string/1177-Can-Make-Palindrome-from-Substring/: main1.cpp
array-and-string/122-Best-Time-to-Buy-and-Sell-Stock-II/: main3.cpp  main4.cpp
array-and-string/125-Valid-Palindrome/: main1.cpp  main2.cpp
array-and-string/1260-Shift-2D-Grid/: main1.cpp
array-and-string/1278-Palindrome-Partitioning-III/: main1.cpp
array-and-string/131-Palindrome-Partitioning/: main1.cpp
array-and-string/1312-Minimum-Insertion-Steps-to-Make-a-String-Palindrome/: main1.cpp  main2.cpp
array-and-string/1313-Decompress-Run-Length-Encoded-List/: main1.cpp
array-and-string/132-Palindrome-Partitioning-II/: main1.cpp
array-and-string/134-Gas-Station/: main1.cpp
array-and-string/1342-Number-of-Steps-to-Reduce-a-Number-to-Zero/: main1.cpp
array-and-string/135-Candy/: main1.cpp
array-and-string/136-Single-Number/: main1.cpp
array-and-string/1365-How-Many-Numbers-Are-Smaller-Than-the-Current-Number/: main1.cpp
array-and-string/14-Longest-Common-Prefix/: main1.cpp
array-and-string/1400-Construct-K-Palindrome-Strings/: main1.cpp
array-and-string/1431-Kids-With-the-Greatest-Number-of-Candies/: main1.cpp
array-and-string/1470-Shuffle-the-Array/: main1.cpp
array-and-string/1480-Running-Sum-of-1d-Array/: main1.cpp
array-and-string/15-3Sum/: main1.cpp
array-and-string/1507-Reformat-Date/: main1.cpp
array-and-string/1576-Replace-All-?-s-to-Avoid-Consecutive-Repeating-Characters/: main1.cpp
array-and-string/1590-Make-Sum-Divisible-by-P/: main1.cpp
array-and-string/161-One-Edit-Distance/: main1.cpp
array-and-string/1616-Split-Two-Strings-to-Make-Palindrome/: main1.cpp
array-and-string/1672-Richest-Customer-Wealth/: main1.cpp
array-and-string/169-Majority-Element/: main1.cpp
array-and-string/1745-Palindrome-Partitioning-IV/: main1.cpp
array-and-string/1752-Check-if-Array-Is-Sorted-and-Rotated/: main1.cpp
array-and-string/1768-Merge-Strings-Alternately/: main1.cpp
array-and-string/1771-Maximize-Palindrome-Length-From-Subsequences/: main1.cpp
array-and-string/1832-Check-if-the-Sentence-Is-Pangram/: main1.cpp
array-and-string/1844-Replace-All-Digits-with-Characters/: main1.cpp
array-and-string/1861-Rotating-the-Box/: main1.cpp
array-and-string/1868-Product-of-Two-Run-Length-Encoded-Arrays/: main1.cpp
array-and-string/189-Rotate-Array/: main2.cpp
array-and-string/1900-Unique-Length-3-Palindromic-Subsequences/: main1.cpp
array-and-string/1929-Concatenation-of-Array/: main1.cpp
array-and-string/1967-Number-of-Strings-That-Appear-as-Substrings-in-Word/: main1.cpp
array-and-string/200-Number-of-Islands/: main1.cpp
array-and-string/2002-Maximum-Product-of-the-Length-of-Two-Palindromic-Subsequences/: main1.cpp
array-and-string/2033-Minimum-Operations-to-Make-a-Uni-Value-Grid/: main1.cpp
array-and-string/2131-Longest-Palindrome-by-Concatenating-Two-Letter-Words/: main1.cpp
array-and-string/214-Shortest-Palindrome/: main1.cpp
array-and-string/2161-Partition-Array-According-to-Given-Pivot/: main1.cpp  main2.cpp
array-and-string/2193-Minimum-Number-of-Moves-to-Make-Palindrome/: main1.cpp
array-and-string/2223-Sum-of-Scores-of-Built-Strings/: main1.cpp
array-and-string/228-Summary-Ranges/: main1.cpp
array-and-string/2326-Spiral-Matrix-IV/: main1.cpp
array-and-string/2373-Largest-Local-Values-in-a-Matrix/: main1.cpp
array-and-string/238-Product-of-Array-Except-Self/: main1.cpp
array-and-string/2390-Removing-Stars-From-a-String/: main1.cpp
array-and-string/242-Valid-Anagram/: main1.cpp  main2.cpp
array-and-string/2472-Maximum-Number-of-Non-Overlapping-Palindrome-Substrings/: main1.cpp
array-and-string/2540-Minimum-Common-Value/: main1.cpp
array-and-string/2553-Separate-the-Digits-in-an-Array/: main1.cpp
array-and-string/26-Remove-Duplicates-from-Sorted-Array/: main1.cpp
array-and-string/266-Palindrome-Permutation/: main1.cpp
array-and-string/267-Palindrome-Permutation-II/: main1.cpp
array-and-string/271-Encode-and-Decode-Strings/: main1.cpp
array-and-string/274-H-Index/: main1.cpp
array-and-string/28-Implement-strStr/: main1.cpp  main2.cpp
array-and-string/283-Move-Zeroes/: main1.cpp  main2.cpp
array-and-string/287-Find-the-Duplicate-Number/: main1.cpp
array-and-string/289-Game-of-Life/: main1.cpp
array-and-string/3-Longest-Substring-Without-Repeating-Characters/: main1.cpp
array-and-string/316-Remove-Duplicate-Letters/: main1.cpp
array-and-string/3300-Minimum-Element-After-Replacement-With-Digit-Sum/: main1.cpp
array-and-string/336-Palindrome-Pairs/: main1.cpp
array-and-string/344-Reverse-String/: main1.cpp  main2.cpp
array-and-string/345-Reverse-Vowels-of-a-String/: main1.cpp
array-and-string/36-Valid-Sudoku/: main1.cpp
array-and-string/3612-Process-String-with-Special-Operations-I/: main1.cpp
array-and-string/3614-Process-String-with-Special-Operations-II/: main1.cpp
array-and-string/38-Count-and-Say/: main1.cpp
array-and-string/3838-Weighted-Word-Mapping/: main1.cpp
array-and-string/3912-Valid-Elements-in-an-Array/: README.md  main1.cpp
array-and-string/392-Is-Subsequence/: main1.cpp
array-and-string/394-Decode-String/: main1.cpp
array-and-string/3951-Minimum-Energy-to-Maintain-Brightness/: main1.cpp
array-and-string/3955-Valid-Binary-Strings-With-Cost-Limit/: main1.cpp
array-and-string/3956-Maximum-Sum-of-M-Non-Overlapping-Subarrays-I/: main1.cpp
array-and-string/3957-Maximum-Sum-of-M-Non-Overlapping-Subarrays-II/: main1.cpp
array-and-string/396-Rotate-Function/: main1.cpp
array-and-string/3967-Maximum-Manhattan-Distance-After-All-Moves/: main1.cpp
arrays-101/: CMakeLists.txt  duplicate-zeros.cpp  even-number-of-digits.cpp  merge-sorted-array.cpp  remove-element.cpp  squares-of-sorted-array.cpp
binary-tree/: CMakeLists.txt
linked-list/: CMakeLists.txt
(+510 files in other folders)
